--- a/jobs.html
+++ b/jobs.html
@@ -23,7 +23,7 @@
 <header>
   <nav class="navbar section-content navbar-container">
     <a href="#" class="nav-logo">
-      <img src="img/Logo_Lang_neu.svg" width="300px" alt="Firmenlogo von Denker Umwelt">
+      <img src="img/LOGO_2005.png" width="300px" alt="Firmenlogo von Denker Umwelt">
     </a>
     <!-- Hamburger Icon -->
     <button class="hamburger" id="hamburger">
@@ -44,135 +44,55 @@
     </ul>
   </nav>
 </header>
-<div style="text-align: center;">
-  <div class="accordion-container-job">
-    <div class="accordion-box-job">
-      <button class="accordion-header-job">Gutachter mit Schwerpunkt Gebäudeschadstoffe</button>
-      <div class="accordion-content-job">
-
-        </p><strong>Die DENKER UMWELT GmbH</strong> ist ein etabliertes Sachverständigenbüro,
-          das sich auf die Themen <strong>Gebäudeschadstoffe</strong>, <strong>Altlasten</strong>, <strong>Schadensfälle</strong>,
-          <strong>abfalltechnische Untersuchungen</strong>, sowie <strong>Hydrogeologie</strong> und <strong>Geothermie</strong> spezialisiert hat.
-          <br>Zur Verstärkung unseres Teams suchen wir <strong>einen Gutachter/in (m/w/d)</strong> für den Schwerpunkt <strong>Gebäudeschadstoffe</strong>.
-        <br>
-
-      </br><h2>Über uns:</h2>
-        <p>Unser Büro ist mit fünf engagierten Mitarbeitern überwiegend regional für Unternehmen sowie öffentliche und private Auftraggeber tätig.
-          Wir bieten Ihnen eine spannende und abwechslungsreiche Tätigkeit, in der Sie Ihre Expertise einbringen können.</p>
-        <br>
 
 
-        <h2>Ihre Aufgaben:</h2>
-        <ul>
-          <li>Erstellung von Gutachten im Bereich Gebäudeschadstoffe und/oder Geothermie/Hydrogeologie</li>
-          <li>Abfalltechnische Untersuchungen und Sanierungsberatung</li>
-          <li>Bearbeitung von Schadensfällen und Revitalisierung von Brachflächen</li>
-          <li>Beratung und Betreuung unserer Kunden in komplexen umwelttechnischen Fragen</li>
-        </ul>
-        <br>
+<h1 class="transparent-heading">JOBS</h1>
 
-        <h2>Das bringen Sie mit:</h2>
-        <ul>
-          <li>Abgeschlossenes Studium im Bereich <strong>M.Sc. techn. Umweltschutz</strong>, <strong>Geologie</strong>, <strong>Umweltwissenschaften</strong> oder eine vergleichbare Qualifikation</li>
-          <li>Sicherer Umgang mit MS-Office-Anwendungen</li>
-          <li>Wünschenswert, aber nicht zwingend erforderlich: Kenntnisse in <strong>Corel Draw</strong>, <strong>Aquainfo</strong>, <strong>Surfer</strong>, <strong>Simulationssoftware EED</strong> oder <strong>GGU-Drawdown</strong> – wir arbeiten Sie gerne ein!</li>
-          <li>Führerschein der Klasse B</li>
-        </ul>
-        <br>
+<div class="job-grid">
+  <!-- Linke große Box -->
+  <div class="job-box-large large">
+    <h1>WIR SIND SPEZIALISTEN.
+    WIR ARBEITEN MIT SPEZIALISTEN.</h1>
+    <h7>Also, mit dir.<br>
 
-        <h2>Wir bieten Ihnen:</h2>
-        <ul>
-          <li>Einen <strong>unbefristeten Arbeitsvertrag</strong> in einem <strong>sicheren</strong> Arbeitsumfeld</li>
-          <li><strong>Flexible Arbeitszeiten</strong> und <strong>abwechslungsreiche Aufgaben</strong></li>
-          <li>Ein gut erreichbares Büro in Bielefeld – sowohl per <strong>Bus und Bahn</strong> als auch mit <strong>kostenfreien Parkplätzen</strong></li>
-          <li>Ein <strong>angenehmes Arbeitsklima</strong> in einem kleinen, dynamischen Team</li>
-          <li><strong>Kostenfreie Getränke</strong> wie Kaffee, Tee und Wasser</li>
-          <li><strong>Prämienzahlungen</strong> bei besonders guter Leistung</li>
-        </ul>
-        <br>
+      Bei uns dreht sich alles um die Gesundheit und Sicherheit von Gebäuden.<br>
+      Wir sind ein kleines, engagiertes Team, das auf Vertrauen und Zusammenarbeit setzt.<br>
+      <br>
 
-        <h2>Haben wir Ihr Interesse geweckt?</h2>
-        <p>Dann freuen wir uns auf Ihre <strong>Bewerbung</strong>! Bitte senden Sie Ihre Unterlagen per E-Mail an:</p>
-        <p><a href="mailto:markus.denker@denker-umwelt.de">markus.denker@denker-umwelt.de</a></p>
+      Gemeinsam arbeiten wir im Büro und tauschen uns regelmäßig aus – der direkte Dialog ist uns wichtig, um kreative Lösungen für komplexe Herausforderungen zu finden.<br>
+      Jeder bringt seinen eigenen Blickwinkel ein, und das macht uns zu einem Team, das viel mehr erreicht, als die Summe seiner Teile.<br>
 
-        <p>Für mehr Informationen über uns, besuchen Sie bitte unsere Website: <a href="http://www.denker-umwelt.de" target="_blank">www.denker-umwelt.de</a></p>
+      Bei uns gibt es keine langen Hierarchien, sondern die Möglichkeit, Verantwortung zu übernehmen und wirklich etwas zu bewegen.<br>
+      Du wirst Teil eines dynamischen Teams, das nicht nur fachlich stark ist, sondern auch miteinander eine offene und kollegiale Atmosphäre pflegt.<br>
 
-        <p><strong>DENKER UMWELT GmbH</strong><br>
-          Mühlenstr. 31, 33607 Bielefeld<br>
-          Fon: 0521/5849461-0 | Fax: 0521/5849461-9<br>
-          Email: <a href="mailto:info@denker-umwelt.de">info@denker-umwelt.de</a></p>
+      Wir bieten dir spannende Aufgaben, bei denen du dein Wissen und deine Fähigkeiten einbringen kannst.
+      Und dabei legen wir großen Wert darauf, dass du dich bei uns rundum wohlfühlst.
 
-        <p>Wir freuen uns darauf, Sie kennenzulernen!</p>
+      Wir arbeiten zusammen im Büro, wo wir den Austausch und die direkte Zusammenarbeit schätzen.
+      Unsere Arbeitszeiten sind klar und fair, und unser Arbeitsverhältnis ist unbefristet.
 
-        <a href="mailto:markus.denker@denker-umwelt.de" class="cta-button">Jetzt Bewerben</a>
-      </div>
-    </div>
+      Wir freuen uns auf dich und darauf, dich als neuen Teil unseres Teams zu begrüßen. Gemeinsam packen wir’s an – für eine bessere, schadstofffreie Zukunft!</h7>
   </div>
 
-  <div class="accordion-container-job">
-    <div class="accordion-box-job">
-      <button class="accordion-header-job">Gutachter mit Schwerpunkt Geothermie/Hydrologie</button>
-      <div class="accordion-content-job">
-        </p><strong>Die DENKER UMWELT GmbH</strong> ist ein etabliertes Sachverständigenbüro,
-          das sich auf die Themen <strong>Gebäudeschadstoffe</strong>, <strong>Altlasten</strong>, <strong>Schadensfälle</strong>,
-          <strong>abfalltechnische Untersuchungen</strong>, sowie <strong>Hydrogeologie</strong> und <strong>Geothermie</strong> spezialisiert hat.
-          <br>Zur Verstärkung unseres Teams suchen wir <strong>einen Gutachter/in (m/w/d)</strong> für den Schwerpunkt <strong>Geothermie/Hydrogeologie</strong>.
-          </ul>
-          </br>
-        <h2>Über uns:</h2>
-        <p>Unser Büro ist mit fünf engagierten Mitarbeitern überwiegend regional für Unternehmen sowie öffentliche und private Auftraggeber tätig. Wir bieten Ihnen eine spannende und abwechslungsreiche Tätigkeit, in der Sie Ihre Expertise einbringen können.</p>
-
-        <h2>Ihre Aufgaben:</h2>
-        <ul>
-          <li>Erstellung von Gutachten im Bereich Gebäudeschadstoffe und/oder Geothermie/Hydrogeologie</li>
-          <li>Abfalltechnische Untersuchungen und Sanierungsberatung</li>
-          <li>Bearbeitung von Schadensfällen und Revitalisierung von Brachflächen</li>
-          <li>Beratung und Betreuung unserer Kunden in komplexen umwelttechnischen Fragen</li>
-        </ul>
-
-        <h2>Das bringen Sie mit:</h2>
-        <ul>
-          <li>Abgeschlossenes Studium im Bereich <strong>M.Sc. techn. Umweltschutz</strong>, <strong>Geologie</strong>, <strong>Umweltwissenschaften</strong> oder eine vergleichbare Qualifikation</li>
-          <li>Sicherer Umgang mit MS-Office-Anwendungen</li>
-          <li>Wünschenswert, aber nicht zwingend erforderlich: Kenntnisse in <strong>Corel Draw</strong>, <strong>Aquainfo</strong>, <strong>Surfer</strong>, <strong>Simulationssoftware EED</strong> oder <strong>GGU-Drawdown</strong> – wir arbeiten Sie gerne ein!</li>
-          <li>Führerschein der Klasse B</li>
-        </ul>
-
-        <h2>Wir bieten Ihnen:</h2>
-        <ul>
-          <li>Einen <strong>unbefristeten Arbeitsvertrag</strong> in einem <strong>sicheren</strong> Arbeitsumfeld</li>
-          <li><strong>Flexible Arbeitszeiten</strong> und <strong>abwechslungsreiche Aufgaben</strong></li>
-          <li>Ein gut erreichbares Büro in Bielefeld – sowohl per <strong>Bus und Bahn</strong> als auch mit <strong>kostenfreien Parkplätzen</strong></li>
-          <li>Ein <strong>angenehmes Arbeitsklima</strong> in einem kleinen, dynamischen Team</li>
-          <li><strong>Kostenfreie Getränke</strong> wie Kaffee, Tee und Wasser</li>
-          <li><strong>Prämienzahlungen</strong> bei besonders guter Leistung</li>
-        </ul>
-
-        <h2>Haben wir Ihr Interesse geweckt?</h2>
-        <p>Dann freuen wir uns auf Ihre <strong>Bewerbung</strong>! Bitte senden Sie Ihre Unterlagen per E-Mail an:</p>
-        <p><a href="mailto:markus.denker@denker-umwelt.de">markus.denker@denker-umwelt.de</a></p>
-
-        <p>Für mehr Informationen über uns, besuchen Sie bitte unsere Website: <a href="http://www.denker-umwelt.de" target="_blank">www.denker-umwelt.de</a></p>
-
-        <p><strong>DENKER UMWELT GmbH</strong><br>
-          Mühlenstr. 31, 33607 Bielefeld<br>
-          Fon: 0521/5849461-0 | Fax: 0521/5849461-9<br>
-          Email: <a href="mailto:info@denker-umwelt.de">info@denker-umwelt.de</a></p>
-
-        <p>Wir freuen uns darauf, Sie kennenzulernen!</p>
-
-        <a href="mailto:markus.denker@denker-umwelt.de" class="cta-button">Jetzt Bewerben</a>
-      </div>
+  <!-- Rechte kleine Boxen (2x2) -->
+  <a href="gutachter1.html" class="job-link">
+    <div class="job-box1">
+      <h1>GUTACHTER MIT SCHWERPUNKT GEBÄUDESCHADSTOFFE</h1>
     </div>
+  </a>
+  <div class="job-box2">
+    <h1>GUTACHTER MIT SCHWERPUNKT GEBÄUDESCHADSTOFFE</h1>
   </div>
-  <div class="accordion-container-job">
-    <div class="accordion-box-job">
-      <button class="accordion-header-job">INITIATIVBEWERBUNG</button>
-      <div class="accordion-content-job">
-        Bliblablub
-      </div>
-    </div>
+  <div class="job-box3">
+    <h1>GUTACHTER MIT SCHWERPUNKT GEBÄUDESCHADSTOFFE</h1>
   </div>
+  <div class="job-box4">
+    <h1>GUTACHTER MIT SCHWERPUNKT GEBÄUDESCHADSTOFFE</h1>
+  </div>
+</div>
+
+
+
   <footer>
     <div class="footer-content">
       <table border="0" style="width: 100%; text-align: left; border-collapse: collapse;">
@@ -209,25 +129,9 @@
   </footer>
 
   <script>
-    document.querySelectorAll(".accordion-header-job").forEach(header => {
-      header.addEventListener("click", function() {
-        let content = this.nextElementSibling;
-        // Toggle max-height based on current state
-        content.style.display = content.style.display === "block" ? "none" : "block";
-      });
-    });
 
-    document.querySelectorAll(".nav-link-ag").forEach(link => {
-      link.addEventListener("click", function() {
-        document.querySelectorAll(".sub-box-ag").forEach(box => {
-          if (box !== this.nextElementSibling) {
-            box.style.display = "none";
-          }
-        });
-        let subBox = this.nextElementSibling;
-        subBox.style.display = subBox.style.display === "block" ? "none" : "block";
-      });
-    });
+
+
 
   </script>
 
