--- a/jobs.html
+++ b/jobs.html
@@ -77,7 +77,7 @@
   <!-- Rechte kleine Boxen (2x2) -->
   <a href="gutachter1.html" class="job-link">
     <div class="job-box1">
-      <h1>GUTACHTER MIT SCHWERPUNKT GEBÄUDESCHADSTOFFE</h1>
+      <h1>INITIATIVBEWERBUNG</h1>
     </div>
   </a>
   <div class="job-box2">
